# daisy

./: .dockerignore  .env.compose  .env.development  .env.example  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAISY_Docker_Compose_Guide.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  backup.md  backup_script.sh  conftest.py  db.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  entrypoint.sh  index.html  legacy_restore.sh  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  setup_cron.sh  sitemap.xml  tox.ini  update_app.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-image.yml  main.yml  release.yml  tests.yml
administration/: index.html
api/: index.html
backup/: index.html
core/: apps.py  constants.py  exceptions.py  issues.py  lcsb.py  reporting.py  search_indexes.py  synchronizers.py  tasks.py  utils.py
core/fixtures/: condition-class.json  contact-types.json  data-log-types.json  datatypes.json  document-types.json  edda.json  elu-cohorts.json  elu-dataset.json  elu-institutions.json  elu-project.json  elu-study.json  funding-sources.json  gdpr-roles.json  legal-basis-types.json  personal-data-types.json  restriction-class.json  sensitivity-class.json  storage-resource.json
core/forms/: __init__.py  access.py  cohort.py  contact.py  contract.py  dac.py  data_declaration.py  dataset.py  document.py  endpoint.py  exposure.py  importer.py  input.py  legal_basis.py  partner.py  permission.py  project.py  publication.py  share.py  storage_location.py  use_condition.py  use_restriction.py  user.py  wizards.py
core/importer/: JSONSchemaValidator.py  base_importer.py  datadecs_importer.py  datasets_exporter.py  datasets_importer.py  elx_submission_importer.py  ldap_users_importer.py  partners_exporter.py  partners_importer.py  projects_exporter.py  projects_importer.py  users_importer.py
core/lcsb/: __init__.py  idservice.py  oidc.py  rems.py
core/migrations/: 0001_initial.py  0002_auto_20190715_1042.py  0003_partner_country.py  0004_auto_20190719_1104.py  0005_auto_20190722_1212.py  0006_auto_20190724_1144.py  0007_auto_20190731_1014.py  0008_auto_20190801_1535.py  0008_auto_20190802_1526.py  0008_user_source_field.py  0009_document_expiry_date.py  0009_storage_duration.py  0010_document_expiry_date.py  0011_auto_20200130_1138.py  0012_auto_20210119_1628.py  0012_userestriction_use_restriction_rule.py  0013_userestriction_use_class_note.py  0014_cohort_url_ethics_notes.py  0015_auto_20210514_0933.py  0016_auto_20210514_2222.py  0017_auto_20210518_1458.py  0018_load_datalogtype_fixtures.py  0019_auto_20210616_1407.py  0019_auto_20210622_1822.py  0020_auto_20210622_1548.py  0020_auto_20210622_1829.py  0020_auto_20210629_1517.py  0020_auto_20210702_1318.py  0020_auto_20210707_1306.py  0020_auto_20210709_1525.py  0020_auto_20210713_1325.py  0020_user_oidc_id.py  0021_auto_20210720_1721.py  0022_elu_accession_null_constraint.py  0022_remove_datadec_title_unq_constraint.py  0023_remove_datadec_title_unq_constraint.py  0024_auto_20211001_1231.py  0024_auto_20211001_1251.py  0024_auto_20211004_1610.py  0024_auto_20211005_1151.py  (+50 more)
core/models/: __init__.py  access.py  cohort.py  condition_class.py  contact.py  contact_type.py  contract.py  dac.py  data_declaration.py  data_log_type.py  dataset.py  datatypes.py  document.py  document_type.py  endpoint.py  exposure.py  funding_source.py  gdpr_roles.py  legal_basis.py  legal_basis_type.py  partner.py  personal_data_type.py  project.py  publication.py  restriction_class.py  sensitivity_class.py  share.py  signals.py  storage_location.py  storage_resource.py  term_model.py  use_condition.py  use_restriction.py  user.py  utils.py
core/permissions/: __init__.py  checker.py  mapping.py
core/templates/: report_email.html  report_email.txt
core/tests/: test_lcsb.py  test_ldap_auth_config.py  test_permissions.py
css/: extra.css
data/demo/: datadecs.json  datasets.json  elu-core.json  projects.json
deploy/: DEPLOYMENT.md
deploy/ansible/: deployment-using-ansible.md  install_daisy.yaml  install_python.yaml  inventory_template.yaml  update_daisy.yaml
deploy/docker/: deployment-using-docker.md
deployment/: index.html
development/: index.html
doc/: administration.md  api.md  backup.md  dac.md  deployment.md  development.md  index.md  integrations.md  legacy-deployment.md  update.md
doc/css/: extra.css
doc/user-guide/: access_management.md  auditors.md  contact.md  contract_management_details.md  dac_management_details.md  daisy.md  dataset_management_details.md  definitions_management_details.md  exposure_management.md  gdpr_compliance.md  interface_conventions.md  introduction.md  legal_basis.md  notifications.md  project_management_details.md  user_login.md  user_management_details.md  users_group.md
docker/nginx/: Dockerfile  nginx.conf  nginx.conf.manual  nginx.conf.template  server.crt  server.key
docker/node/: Dockerfile
docker/solr/: Dockerfile  currency.xml  elevate.xml  managed-schema.xml  schema.xml  solrconfig.xml
elixir_daisy/: __init__.py  celery_app.py  settings.py  settings_ci.py  settings_compose.py  settings_compose_ci.py  settings_local.template.py  settings_tests.py  urls.py  wsgi.py
integrations/: index.html
legacy-deployment/: index.html
notification/: __init__.py  admin.py  api.py  apps.py  email_sender.py  models.py  tasks.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20190802_1433.py  0003_auto_20220726_1343.py  0004_auto_20231018_1205.py  0004_auto_20231020_1014.py  0004_auto_20231020_1146.py  0004_auto_20231024_0803.py  0004_auto_20231025_1100.py
notification/tests/: conftest.py  test_api.py  test_email.py  test_models.py  test_tasks.py
scripts/: backup_script.sh  create_env.sh  create_production_env.sh  db.sh  legacy_restore.sh  update_solr_schema.sh
search/: search_index.json
test/: factories.py
update/: index.html
web/: admin.py  lcsb.py  urls.py
(+325 files in other folders)
